portfolio/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - portfolio
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: portfolio
        image: jfischer00/portfolio-site:latest
        ports:
        - containerPort: 80
