portfolio/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  annotations:
    spec.ingressClassName: "traefik"  # or nginx depending on your ingress controller
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - portfolio.fischmc.net
    secretName: fischmc-tls
  rules:
  - host: portfolio.fischmc.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-service
            port:
              number: 80
